fixed spacing on items

--- a/app/assets/stylesheets/template.css
+++ b/app/assets/stylesheets/template.css
@@ -125,3 +125,8 @@ color: #60464b;
 .lead strong {
   font-size: 24px;
 }
+
+
+.menu_spacing {
+  margin-left: 20px;
+}
